--- a/Front/style/game_style.css
+++ b/Front/style/game_style.css
@@ -24,12 +24,18 @@ td{
     background-image: url(../media/sprites/objects/walls/Кирп-кам-стена1.png);
     background-size: 524px;
     transform: translate(0,0);
+    z-index: 1;
 }
 table td:hover, .wall1:hover, .wall2:hover{
     cursor: pointer;
     border-color: aqua;
 }
-
+.skillmenu{
+    z-index: 0;
+}
+.skills{
+    z-index: 3;
+}
 /*Первая стена*/
 [img=img1]{
     background-image: none;
