--- a/Front/style/walk.css
+++ b/Front/style/walk.css
@@ -14,3 +14,13 @@
         left: var(--walking-left);
     }
 }
+@keyframes damageGet {
+    0%{
+        margin-top: 0;
+        margin-left:0;
+    }
+    100%{
+        margin-top: -10px;
+        margin-left: -5px;
+    }
+}
